# b3-selic-pre

./: .gitignore  CHANGELOG-ARCHIVE.md  CHANGELOG.md  Makefile  README.md  b3-selic-pre.desktop  b3-selic-pre.spec  b3_selic_pre.py  panels.md  pyproject.toml  requirements.txt
.github/workflows/: release.yml  test.yml
.opencode/skills/openspec-changelog/: SKILL.md
.opencode/skills/release-push/: SKILL.md  release-push.sh
.opencode/skills/release-version/: SKILL.md
openspec/changes/auto-analysis-commentary/: design.md  proposal.md  tasks.md
openspec/changes/cache-b3-em-disco/: tasks.md
openspec/changes/clean-arch-pyproject/: proposal.md  tasks.md
openspec/changes/create-ui/: design.md  proposal.md  tasks.md
openspec/changes/evolucao-resumo-executivo/: proposal.md  tasks.md
openspec/changes/fix-after-min-feature/: design.md  proposal.md  tasks.md
openspec/changes/fix-inference-edge-cases/: tasks.md
openspec/changes/grafico-3d-evolucao-curva/: design.md  proposal.md  tasks.md
openspec/changes/hierarchical-inference-engine/: design.md  proposal.md
openspec/changes/improve-quiver-arrow-layout/: proposal.md  tasks.md
openspec/changes/novo-resumo-executivo/: design.md  proposal.md  tasks.md
openspec/changes/refine-inference-pipeline/: design.md  proposal.md  tasks.md
openspec/specs/analysis-panel/: spec.md
openspec/specs/app-icon/: spec.md
openspec/specs/disk-cache/: spec.md
src/b3_selic_pre/: __main__.py
tests/: test_analyze.py  test_b3_selic_pre.py  test_b3_selic_pre_gui.py  test_disk_cache.py  test_evolucao_resumo.py  test_novo_resumo.py
(+194 files in other folders)
